--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -13,9 +13,11 @@ jobs:
           npm install
           npm test
      
-      
-
-        
+      #guardar el estado de los tests en una variable para usarlo luego
+      - name: Guardar estado de los tests en una variable para usarlo en el job siguiente
+        id: tests
+        run: |
+          echo "::set-output name=resultado_tests::$(npm test)"
   agregar_meme:
     runs-on: ubuntu-latest
     steps:
@@ -26,8 +28,7 @@ jobs:
         env:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sables"
-          #estado del job anterior sin sin aver declarado variables
-          resultado_tests: ${{ jobs.steps.ejecutar_tests.status }}
+          resultado_tests: ${{ steps.tests.outputs.resultado_tests }}
          
           TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
          
