--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -20,6 +20,7 @@ jobs:
           echo "::set-output name=resultado_tests::$(npm test)"
   agregar_meme:
     runs-on: ubuntu-latest
+    needs: ejecutar_tests
     steps:
       - name: Checkout
         uses: actions/checkout@v2
