--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -20,7 +20,7 @@ jobs:
           echo "::set-output name=resultado_tests::$(npm test)"
   agregar_meme:
     runs-on: ubuntu-latest
-    needs: ejecutar_tests
+    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v2
