workflow-action-readme

--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -1,41 +1,29 @@
-name: "modify_readme"
-
-on: [push]
-
+name: modify_readme
+on: push
 jobs:
-  ejecutar_tests:
-    runs-on: ubuntu-latest 
+  tests:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Ejecutar tests
-        run: |
-          npm install
-          npm test
-      - name: Guardar resultado de los tests
-        run: echo "::set-output name=resultado_tests::$TEST_RESULT"
-        
+    - name: Checkout code
+      uses: actions/checkout@v2
+    - name: Run tests
+      run: |
+          echo "::set-output name=resultado_tests::$(npm test)"
   agregar_meme:
     runs-on: ubuntu-latest
+    needs: tests
+    env:
+     TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Agregar meme al readme
         uses: ./
-        env:
-          frase_positiva: "Los tests han funcionado y lo sabes"
-          frase_negativa: "Los tests han fallado y lo sables"
-          resultado_tests: ${{ job.ejecutar_tests.outputs.resultado_tests }}
-          TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
-         
-
-          run: |
-            npm install
-            node index.js
-      
-
+        with:
+          frase_positiva: 'Los tests han funcionado y lo sabes'
+          frase_negativa: 'Los tests han fallado y lo sabes'
+          resultado_tests: ${{ needs.tests.outputs.resultado_tests }}
       - name: Commit and push
-       
         run: |
           git config  user.name  Jessica-Reche
           git config  user.email jessikareix20@gmail.com
