--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -5,21 +5,19 @@ on: [push]
 jobs:
   ejecutar_tests:
     runs-on: ubuntu-latest 
-    env:
-      TOKEN_GITHUB_JESSICA: ${{ secrets.TOKEN_GITHUB_JESSICA }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: ejecutar tests
         run: |
           npm install
-          npm test
-     
-      #guardar el estado de los tests en una variable para usarlo luego
-      - name: Guardar estado de los tests en una variable para usarlo en el job siguiente
-        id: tests
+          npm test 
+      # guardar el resultado de los tests
+      - name: Guardar resultado de los tests
+        id: ejecutar_tests
         run: |
-          echo "::set-output name=resultado_tests::$(npm test)" 
+          echo "::set-output name=status::$(echo $?)" 
+        
   agregar_meme:
     runs-on: ubuntu-latest
     steps:
@@ -27,10 +25,17 @@ jobs:
         uses: actions/checkout@v2
       - name: Agregar meme al readme
         uses: ./
-        with:
-         frase_positiva: 'Los tests han funcionado y lo sabes'
-         frase_negativa: 'Los tests han fallado y lo sabes'
-         resultado_tests: ${{ steps.ejecutar_tests.outputs.resultado_tests }}
+        env:
+          frase_positiva: "Los tests han funcionado y lo sabes"
+          frase_negativa: "Los tests han fallado y lo sables"
+          resultado_tests: ${{ steps.ejecutar_tests.outputs.status }}
+          TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
+         
+
+          run: |
+            npm install
+            node index.js
+      
 
       - name: Commit and push
        
