--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -18,9 +18,11 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: resultado_tests
+      
      
   agregar_meme:
     runs-on: ubuntu-latest
+    needs: ejecutar_tests
     steps:
       - name: Checkout
         uses: actions/checkout@v2
