--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Descargar artefactos
         uses: actions/download-artifact@v2
         with:
-          name: resultado_tests
+          name: ejecutar tests
           
        
         #Usar el resultado de los tests
