--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -34,7 +34,7 @@ jobs:
           path: resultado_tests
       - name: Usar el resultado de los tests desde el artefacto
         run: |
-          resultado_tests=$(cat resultado_tests.txt)
+          resultado_tests=$(cat resultado_tests/resultado_tests.txt)
           echo "::set-output name=resultado_tests::$resultado_tests"
       - name: Agregar meme al readme
         uses: ./
