--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -31,8 +31,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: resultado_tests
-          path: resultado_tests
-
+          run: resultado_tests/resultado_tests.txt"
          
       - name: Usar el resultado de los tests desde el artefacto
         run: |
