--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -20,7 +20,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: resultado_tests
-          path: resultado_tests/resultado_tests.txt"
+          path: resultado_tests/resultado_tests.txt
   agregar_meme:
     runs-on: ubuntu-latest
     needs: ejecutar_tests
@@ -31,7 +31,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: resultado_tests
-          path: resultado_tests/resultado_tests.txt
+          path: resultado_tests
          
       - name: Usar el resultado de los tests desde el artefacto
         run: |
