workflow-action-readme

--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -35,7 +35,7 @@ jobs:
          
       - name: Usar el resultado de los tests desde el artefacto
         run: |
-          resultado_tests=$(cat resultado_tests.txt)
+          resultado_tests=$(cat resultado_tests/resultado_tests.txt)
           echo "::set-output name=resultado_tests::
       - name: Agregar meme al readme
         uses: ./
