--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -31,13 +31,13 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: resultado_tests
-          path: resultado_tests.txt
+          path: resultado_tests/resultado_tests.txt
+
          
       - name: Usar el resultado de los tests desde el artefacto
         run: |
-          resultado_tests=$(cat resultado_tests.txt)
+          resultado_tests=$(cat resultado_tests/resultado_tests.txt)
           echo "::set-output name=resultado_tests::$resultado_tests"
-
       - name: Agregar meme al readme
         uses: ./
         env:
