--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -1,49 +1,32 @@
 name: "modify_readme"
 on: [push]
 jobs:
-  ejecutar_tests:
+  tests:
     runs-on: ubuntu-latest 
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: ejecutar tests
+      - name: test_job
         run: |
           npm install
-          npm run build --if-present
-          npm test 
-          if [ $? -eq 0 ]; then
-            echo "success" > resultado_tests.txt
-          else
-            echo "fail" > resultado_tests.txt
-          fi
-      - name: Guardar resultado de los test en artefactos
-        uses: actions/upload-artifact@v3
-        with:
-          name: resultado_tests
-          path: resultado_tests.txt
+          npm test
+          TEST_RESULT=$?
+          echo "Test result: $TEST_RESULT"
+          echo "::set-output name=test_result::$TEST_RESULT"
+      
+      
   agregar_meme:
     runs-on: ubuntu-latest
-    needs: ejecutar_tests
+    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Descargar artefactos
-        uses: actions/download-artifact@v3
-        with:
-          name: resultado_tests
-          path: resultado_tests/resultado_tests.txt
-
-         
-      - name: Usar el resultado de los tests desde el artefacto
-        run: |
-          resultado_tests=$(cat resultado_tests/resultado_tests.txt)
-          echo "::set-output name=resultado_tests::$resultado_tests"
       - name: Agregar meme al readme
         uses: ./
         env:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sabes"
-          resultado_tests: ${{ steps.ejecutar_tests.outputs.status }}
+          resultado_tests: ${{ steps.test.outputs.test_result }}
           TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
           run: |
             npm install
