--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -12,12 +12,12 @@ jobs:
           npm test
           TEST_RESULT=$?
           echo "Test result: $TEST_RESULT"
-          echo "::set-output name=test_result::$TEST_RESULT"
-      
-      
+          echo "::set-output name=test_result::$resultado_test"
+        env:
+         resultado_test: ${{ steps.test_job.outputs.test_result}}
+       
   agregar_meme:
     runs-on: ubuntu-latest
-    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -26,7 +26,6 @@ jobs:
         env:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sabes"
-          resultado_tests: ${{ steps.test.outputs.test_result }}
           TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
           run: |
             npm install
