workflow-action-readme

--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -10,8 +10,8 @@ jobs:
         run: |
           npm install
           npm test
-          echo "::set-output name=test_result::$?"
-          
+        id: test
+     
   agregar_meme:
     runs-on: ubuntu-latest
     needs: test
@@ -23,7 +23,7 @@ jobs:
         with:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sabes"
-          resultado_tests: ${{ needs.test.outputs.test_result }}
+          resultado_tests: ${{ needs.test.result }}
           TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
           run: |
             npm install
