--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -40,7 +40,7 @@ jobs:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sabes"
          #resultado_tests va a cogerlo de lo descargado de los artifacts
-          resultado_tests: ${{ steps.1 }}
+          resultado_tests: ${{ steps.test.outputs.resultado_tests }}
           TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
           run: |
             npm install
