--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -10,37 +10,23 @@ jobs:
         run: |
           npm install
           npm test
-        id: test
-        env:
-          CI: true
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v2
-        if: always()
-        with:
-          name: test-results
-          path: test-results.xml
+          echo "::set-output name=test_result::$?"
+    outputs:
+      test_result: ${{ steps.test_job.outputs.test_result }}
        
           
   agregar_meme:
     runs-on: ubuntu-latest
     needs: test
     steps:
-
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: Download test results
-        uses: actions/download-artifact@v2
-        with:
-          name: test-results
-          path: test-results.xml
+        uses: actions/checkout@v3
       - name: Agregar meme al readme
         uses: ./
         with:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sabes"
-         #resultado_tests va a cogerlo de lo descargado de los artifacts
-          resultado_tests: ${{ steps.test.outputs.resultado_tests }}
+          resultado_tests: ${{ needs.test.outputs.test_result }}
           TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
           run: |
             npm install
