--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -31,6 +31,17 @@ jobs:
           run: |
             npm install
             npm start
+            run: |
+            npm install
+            if ${{ needs.test.outputs.test_result }} -eq 0
+            then
+              resultado_tests="exitoso"
+            else
+              resultado_tests="fallido"
+            fi
+            echo "::set-output name=resultado_tests::$resultado_tests"
+   
+           
       - name: Commit and push 
         run: |
           git config  user.name  Jessica-Reche
