workflow-action-readme

--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -16,7 +16,7 @@ jobs:
           #resultado de la ejecución de los tests
           echo "::set-output name=resultado_tests::$(npm test)"
           #ver el contenido de la variable resultado_tests
-          echo $resultado_tests
+          echo "resultado:" $resultado_tests
 
           
   agregar_meme:
