--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -4,7 +4,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     outputs:
-      resultado_tests: ${{ steps.test_job.outputs.resultado_tests }}
+      output1: ${{ steps.test_job.outputs.result }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -13,11 +13,9 @@ jobs:
         run: |
           npm install
           npm test
+          result=$?
           #resultado de la ejecución de los tests
-          echo "::set-output name=resultado_tests::$(npm test)"
-    
-
-          
+          echo "::set-output name=result::$result"
   agregar_meme:
     runs-on: ubuntu-latest
     needs: test
@@ -29,7 +27,7 @@ jobs:
         with:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sabes"
-          resultado_tests: ${{ needs.test.outputs.resultado_tests }}
+          resultado_tests: ${{ needs.test.outputs.output1}}
           TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
           run: |
             npm install
