workflow-action-readme

--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -28,7 +28,7 @@ jobs:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sabes"
           resultado_tests: ${{ needs.test.outputs.resultado_tests}}
-          TOKEN_GITHUB: ${{ secrets.TOKEN_GITHUB_JESSICA }}
+          
           run: |
             npm install
             npm start
@@ -39,3 +39,5 @@ jobs:
           git add .
           git commit -m"Agregar meme al readme"
           git push https://$TOKEN_GITHUB_JESSICA@github.com/Jessica-Reche/githubActions_examples.git
+        with:
+          TOKEN_GITHUB_JESSICA: ${{ secrets.TOKEN_GITHUB_JESSICA }}
