--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -28,10 +28,14 @@ jobs:
           frase_positiva: "Los tests han funcionado y lo sabes"
           frase_negativa: "Los tests han fallado y lo sabes"
           resultado_tests: ${{ needs.test.outputs.resultado_tests}}
-      - name: Commit and push 
+      - name: Ejecutar código
+        run: |
+          npm install
+          npm start
+      - name: Commit and push
         run: |
           git config  user.name  Jessica-Reche
           git config  user.email jessikareix20@gmail.com
           git add .
           git commit -m"Agregar meme al readme"
-          git push https://${{ secrets.TOKEN_GITHUB_JESSICA }}@github.com/Jessica-Reche/githubActions_examples.git 
+          git push https://${{ secrets.TOKEN_GITHUB_JESSICA }}@github.com/Jessica-Reche/githubActions_examples.git
