--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -3,15 +3,21 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
+    outputs:
+      resultado_tests: ${{ steps.test_job.outputs.result }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: test_job
+        id: test_job
         run: |
           npm install
           npm test
           result=$?
+          #resultado de la ejecución de los tests
+          echo "::set-output name=result::$result"
           echo "::set-env name=TEST_RESULT::$result"
+
   agregar_meme:
     runs-on: ubuntu-latest
     steps:
@@ -19,7 +25,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Obtener resultado de los tests
         run: |
-            resultado_tests=${{ env.TEST_RESULT }}
+            resultado_tests=${{env.resultado_tests }}
       - name: Agregar meme al readme
         uses: ./
         with:
