--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -17,11 +17,14 @@ jobs:
           #resultado de la ejecución de los tests
           echo "::set-output name=result::$result"
   agregar_meme:
-    needs: test
     runs-on: ubuntu-latest
+    needs: test
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Obtener resultado de los tests
+        run: |
+            resultado_tests=${{ env.TEST_RESULT }}
       - name: Agregar meme al readme
         uses: ./
         with:
