workflow-action-readme

--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -2,7 +2,9 @@ name: "modify_readme"
 on: [push]
 jobs:
   test:
+    
     runs-on: ubuntu-latest
+    continue-on-error: true
     outputs:
       resultado_tests: ${{ steps.test_job.outputs.result }}
     steps:
@@ -15,9 +17,8 @@ jobs:
           npm test
           result=$?
           #resultado de la ejecución de los tests
-          `echo ::set-output name=result::$result`
-          `echo ::set-env name=TEST_RESULT::$result`
-
+          echo `::set-output name=result::$result`
+          echo `::set-env name=TEST_RESULT::$result`
   agregar_meme:
     runs-on: ubuntu-latest
     if: ${{ always() }}
