workflow-action-readme

--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -14,11 +14,12 @@ jobs:
         id: test_job
         run: |
           npm install
-          npm test
-          result=$?
-          #resultado de la ejecución de los tests
-          echo `::set-output name=result::$result`
-          echo `::set-env name=TEST_RESULT::$result`
+          npm test #si la ejecución de los tests falla, el resultado será 1 y se ejecutará el siguiente job con la variable de entorno TEST_RESULT=1
+          echo "::set-output name=result::$(echo $?)"
+          #se guarda el resultado de la ejecución de los tests en la variable de entorno TEST_RESULT
+          echo "TEST_RESULT=$(echo $?)" >> $GITHUB_ENV
+
+       
   agregar_meme:
     runs-on: ubuntu-latest
     if: ${{ always() }}
