workflow-action-readme

--- a/.github/workflows/modify_readme.yaml
+++ b/.github/workflows/modify_readme.yaml
@@ -3,7 +3,6 @@ on: [push]
 jobs:
   test:
     runs-on: ubuntu-latest
-    continue-on-error: true
     outputs:
       resultado_tests: ${{ steps.test_job.outputs.result }}
     steps:
@@ -16,8 +15,8 @@ jobs:
           npm test
           result=$?
           #resultado de la ejecución de los tests
-          `echo ::set-output name=result::$result`
-          `echo ::set-env name=TEST_RESULT::$result`
+          echo  `::set-output name=result::$result`
+          echo  `::set-env name=TEST_RESULT::$result`
   agregar_meme:
     runs-on: ubuntu-latest
     needs: test
